--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <h1>Hablu vaiya</h1>
+<p>
+Toma is a fictional charecter created for demonstration purposes.
 
+</p>
   </body>
 </html>
