--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
 <h1>Hablu vaiya</h1>
-<p>
-Toma is a fictional charecter created for demonstration purposes.
-
-</p>
+<h2>amr jobon tof hoaelk ikesf </h2>
   </body>
 </html>
