--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,6 @@
 <h1>Hablu vaiya</h1>
 <h2>amr jobon tof hoaelk ikesf </h2>
     <p>Toma apu</p>
-    <h3>Karim has no one leg</h3>
+    <h3>Ali is going to home with his beautigful wife</h3>
   </body>
 </html>
